feat: Complete OOP1 assignment with all required Java features
This commit completes all assignment requirements:

FUNDAMENTALS:
- Classes: Vehicle, Car, Motorbike, ParkingSlot, Ticket, ParkingService, Money
- this() vs this.: Constructor chaining in Vehicle, instance access throughout
- Method overloading: Two park() methods in ParkingService
- Varargs: printSlotDetails(int... slotNumbers)
- LVTI (var): Used in Main.java for type inference
- Encapsulation: Private fields with public getters in all model classes
- Interfaces: Parkable with static, default, and private methods
- Inheritance: Car/Motorbike extend sealed abstract Vehicle
- Overriding/Polymorphism: calculateFee() overridden in subclasses
- super() vs super.: Constructor calls and method access in Car
- Exceptions: ParkingFullException (checked), IllegalArgumentException (unchecked)
- Enums: VehicleType, ParkingStatus
- Arrays: ParkingSlot[] in ParkingService
- Java Core API: String, StringBuilder, List, Set, LocalDateTime

ADVANCED:
- Call-by-value & defensive copying: Documented in ParkingService
- Private/default/static interface methods: All in Parkable
- Records: Ticket as immutable data carrier
- Custom immutable type: Money class
- Lambdas (Predicate): findVehicles() with lambda expressions
- Final/effectively final: Documented in lambda context
- Method references: System.out::println
- Switch expressions: Vehicle creation and input parsing
- Pattern matching: instanceof with type patterns
- Sealed classes: Vehicle permits only Car, Motorbike

JAVA 25 (Extra marks):
- Instance main methods (JEP 512): void main() entry point
- Flexible constructor bodies (JEP 513): Validation before super()

Also includes:
- Updated UML diagram with feature annotations
- Final report (MD and PDF) with GitHub repo link
- Video script for screencast recording